# sample_project

./: .gitignore  CMakeLists.txt  build.bat  build_log.txt  build_output.txt  do_build.bat  generate_optical_report.py  generate_ordered_optical_report.py  partitions.csv  run_cmake.bat  sdkconfig  sdkconfig.defaults  sdkconfig.old
docs/: CST78XX_debug.txt  CST816T_V2.2.txt  CST816T_registers.txt
main/: CMakeLists.txt  audio_upload.c  audio_upload.h  doubao.c  doubao.h  idf_component.yml  main.c  wifi_mqtt.c  wifi_mqtt.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
main/ui/fonts/: ui_font_Font1.c  ui_font_emoji.c
main/ui/images/: ui_img_album_png.c  ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_forward_png.c  ui_img_pattern_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_sls_logo_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
main/ui/screens/: ui_Alarm.c  ui_Alarm.h  ui_Call.c  ui_Call.h  ui_Chat.c  ui_Chat.h  ui_Clock.c  ui_Clock.h  ui_Music_Player.c  ui_Music_Player.h  ui_Splash.c  ui_Splash.h  ui_Weather.c  ui_Weather.h
report_assets/: requirements.docx
(+20 files in other folders)
